--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 main {
-  font-size: 1rem;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -7,16 +6,68 @@ main {
   justify-content: center;
   margin-top: 1rem;
 }
+main div {
+  margin-top: 1rem;
+}
+main div div article {
+  margin: 0;
+  text-align: justify;
+}
 
-button, input, select, textarea {
-  width: 100%;
-  border-radius: 4px;
-  border: 1px solid #bbb;
+h1, h2 {
+  font-size: 1.5rem;
+}
+
+label {
+  color: #363636;
+}
+
+.form-control, .input-group {
+  width: 30rem;
   height: 3rem;
 }
 
-#precio-online, #precio-steam, .compras {
-  margin-bottom: 1rem;
+.span-dolar {
+  background-color: rgba(8, 143, 8, 0.486);
+  color: white;
+  text-shadow: 2px 2px 2px black;
+}
+
+.span-pesos {
+  background-color: lightblue;
+  color: white;
+  text-shadow: 2px 2px 2px black;
+}
+
+#panel-pesos, #flip {
+  background-color: lightblue;
+  color: white;
+  text-shadow: 2px 2px 2px black;
+}
+
+#panel-pesos {
+  padding: 10px;
+  border-radius: 4px;
+  display: none;
+}
+
+#panel-dolares, #flip {
+  background-color: rgba(8, 143, 8, 0.486);
+  color: white;
+  text-shadow: 2px 2px 2px black;
+}
+
+#panel-dolares {
+  padding: 10px;
+  border-radius: 4px;
+  display: none;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  font-family: "Rubik", sans-serif;
 }
 
 /*# sourceMappingURL=style.css.map */
